--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,8 +23,8 @@
 }
 
 ::selection {
-    color: #000;
-    background: #EDF4D7;
+    color: #0B6AC9;
+    background: #B8CFDE;
 }
 
 input::-webkit-outer-spin-button,
