--- a/src/app/pages/calculate/calculate.component.scss
+++ b/src/app/pages/calculate/calculate.component.scss
@@ -11,7 +11,7 @@
         padding: 0 15px 183px;
         position: relative;
         background: linear-gradient(0deg, #09213A -3.48%, rgba(0, 0, 0, 0.00) 77.87%), url('/assets/images/calculatebackground.png'), lightgray 50% / cover no-repeat;
-        background-position: center center;
+        background-position: 25% center;
         background-size: cover;
         img{
             width: 68px;
