--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -48,14 +48,14 @@
             background: #1C3955;
             overflow-y: auto;
             transform: translateX(-100%);
-            transition: transform 1s ease-in-out;
+            transition: transform 1s linear;
             &::-webkit-scrollbar{
                 width: 0;
             }
             &.open{
                 display: flex;
                 transform: translateX(0);
-                animation: modalOpen 1s ease-in-out;
+                animation: modalOpen 1s linear;
             }
             .close{
                 width: 44px;
@@ -174,6 +174,16 @@
             column-gap: 40px;
             padding: 20px 70px;
             margin: 0 auto;
+            &:active{
+                box-shadow: none !important;
+                border: none !important;
+                outline: none !important;
+            }
+            &:focus{
+                box-shadow: none !important;
+                border: none !important;
+                outline: none !important;
+            }
                 svg{
                     display: flex;
                     margin: 0;
@@ -476,6 +486,16 @@
                 min-height: 104px;
                 .letter{
                     fill: #FFF;
+                }
+                &:active{
+                    box-shadow: none !important;
+                    border: none !important;
+                    outline: none !important;
+                }
+                &:focus{
+                    box-shadow: none !important;
+                    border: none !important;
+                    outline: none !important;
                 }
             }
             nav{
