--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -183,7 +183,7 @@
     </div>
     <div class="header-fixed" [ngClass]="{'visible': !isHeaderVisible}">
         <div class="desk">
-            <svg [routerLink]="['/home']" width="68" height="54" viewBox="0 0 68 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="68" height="54" viewBox="0 0 68 54" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="logo" clip-path="url(#clip0_513_730)">
                 <path id="Vector" d="M57.0028 23.0269H44.633C44.633 23.0269 44.8141 13.4083 33.8156 12.5336C33.8156 12.5336 23.7091 12.5336 22.9649 23.0269H13.2765L20.141 21.8611L10.4579 17.7803L20.7362 18.3638L12.4124 11.9514L22.5189 15.4487L15.9792 6.99591L24.5998 12.5336L21.33 3.20619L27.8697 10.7843L26.9777 0.874653L31.4364 9.91099L33.2218 0L35.3027 9.61857L39.4646 0.582231L38.8695 11.0754L45.4092 2.62265L41.8425 12.8248L50.4631 6.41238L44.5185 15.1563L53.97 11.5128L46.3012 17.7789L56.4077 17.1954L47.1919 21.5674L57.0015 23.0242L57.0028 23.0269Z" fill="url(#paint0_linear_513_730)"/>
                 <path id="Vector_2" d="M43.3283 23.1717C43.3283 18.0204 39.0692 13.8442 33.8156 13.8442C28.562 13.8442 24.3029 18.0204 24.3029 23.1717H43.3283Z" fill="url(#paint1_linear_513_730)"/>
