--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -48,7 +48,7 @@
             background: #1C3955;
             overflow-y: auto;
             transform: translateX(-100%);
-            transition: transform 1.5s ease-out;
+            transition: transform 1.5s ease;
             &::-webkit-scrollbar{
                 width: 0;
             }
