--- a/src/app/pages/calculate/calculate.component.html
+++ b/src/app/pages/calculate/calculate.component.html
@@ -1,6 +1,6 @@
 <div class="calculate">
     <div class="calculator">
-        <img  [routerLink]="['/calculate']" src="/assets/images/logoblue.svg" alt="Graphics logo.">
+        <img [routerLink]="['/home']" src="/assets/images/logoblue.svg" alt="Graphics logo.">
         <h1>Calcule aqui seu investimento em Energia Solar.</h1>
         <div class="calc">
             <div>
