--- a/src/app/pages/calculate/calculate.component.html
+++ b/src/app/pages/calculate/calculate.component.html
@@ -96,7 +96,7 @@
                         </section>
                         <section class="type">
                             <label for="number">*Digite seu telefone </label>
-                            <input [(ngModel)]="phone" name="number" id="number" type="text" placeholder="(DDD) 9999-9999" appPhoneFormat>
+                            <input [(ngModel)]="phone" name="number" id="number" type="text" inputmode="numeric" placeholder="(DDD) 9999-9999" appPhoneFormat>
                         </section>
                         <section class="text">
                             <p>Sua privacidade é nossa prioridade.<br> Dados protegidos pela Lei de Proteção de Dados.</p>
