--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,6 +105,9 @@ body{
                     }
                 }
             }
+            .mobile-fixed{
+                display: none !important;
+            }
         }
     }
     .header{
