--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -137,7 +137,7 @@
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-between;
-                margin: 0 auto;
+                margin: 0 auto 50px;
                 a{
                     text-decoration: none;
                     cursor: pointer;
