Adjusting website text.

--- a/src/app/pages/calculate/calculate.component.html
+++ b/src/app/pages/calculate/calculate.component.html
@@ -2,7 +2,7 @@
     <div class="calculator">
         <img [routerLink]="['/home']" src="/assets/images/logoblue.svg" alt="Graphics logo.">
         <h1>Calcule aqui seu investimento em Energia Solar.</h1>
-        <div class="calc">
+        <div class="calc" id="calculate">
             <div>
                 <ng-container *ngIf="steps == 0">
                     <h1>Está pronto para<br> economizar?</h1>
