--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,13 +6,13 @@
                 <h1>Empresa</h1>
                 <ul>
                     <li>
-                        <a href="">Sobre</a>
+                        <a routerLink="/home" (click)="scrollToElement('services')">Services</a>
                     </li>
                     <li>
-                        <a href="">Contatos</a>
+                        <a routerLink="/home" (click)="scrollToElement('contacts')">Contatos</a>
                     </li>
                     <li>
-                        <a href="">Sobre</a>
+                        <a routerLink="/home" (click)="scrollToElement('about')">Sobre</a>
                     </li>
                 </ul>
             </section>
@@ -20,13 +20,13 @@
                 <h1>Serviços</h1>
                 <ul>
                     <li>
-                        <a href="">Preços</a>
+                        <a routerLink="/calculate" (click)="scrollToElement('calculate')">Preços</a>
                     </li>
                     <li>
-                        <a href="">Soluções</a>
+                        <a routerLink="/home" (click)="scrollToElement('home')">Soluções</a>
                     </li>
                     <li>
-                        <a href="">Economia</a>
+                        <a routerLink="/calculate" (click)="scrollToElement('calculate')">Economia</a>
                     </li>
                 </ul>
             </section>
@@ -34,10 +34,10 @@
                 <h1>Siga-nos</h1>
                 <ul>
                     <li>
-                        <a href="" target="_blank">Facebook</a>
+                        <a href="https://www.facebook.com/graphicstecnologiaoficial?mibextid=ZbWKwL" target="_blank">Facebook</a>
                     </li>              
                     <li>
-                        <a href="" target="_blank">Instagram</a>
+                        <a href="https://www.instagram.com/graphicstecnologiaoficial/" target="_blank">Instagram</a>
                     </li>
                     <li>
                         <a href="" target="_blank">Youtube</a>
