--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -64,19 +64,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a routerLink="/home" (click)="scrollToElement('home')">Home</a>
                 </li>
                 <li>
-                    <a href="">Serviços</a>
+                    <a routerLink="/home" (click)="scrollToElement('services')">Serviços</a>
                 </li>
                 <li>
-                    <a href="">Depoimentos</a>
+                    <a routerLink="/home" (click)="scrollToElement('feedback')">Depoimentos</a>
                 </li>
                 <li>
-                    <a href="">Sobre</a>
+                    <a routerLink="/home" (click)="scrollToElement('about')">Sobre</a>
                 </li>
                 <li>
-                    <a href="">Contato</a>
+                    <a routerLink="/home" (click)="scrollToElement('contact')">Contato</a>
                 </li>
             </ul>
         </nav>
@@ -102,7 +102,7 @@
             </button>
         </div>
         <div>
-            <a href="" target="_blank">
+            <a href="https://www.facebook.com/graphicstecnologiaoficial" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="23" viewBox="0 0 17 23" fill="none">
                     <g clip-path="url(#clip0_223_1009)">
                       <path d="M5.16019 22.7062V12.2145H2.43036V8.43701H5.16019V5.21053C5.16019 2.67513 6.77272 0.346802 10.4883 0.346802C11.9927 0.346802 13.1051 0.493368 13.1051 0.493368L13.0175 4.02092C13.0175 4.02092 11.883 4.0097 10.645 4.0097C9.30507 4.0097 9.0904 4.63721 9.0904 5.67874V8.43701H13.124L12.9485 12.2145H9.0904V22.7062H5.16019Z"/>
@@ -114,7 +114,7 @@
                     </defs>
                 </svg>
             </a>
-            <a href="" target="_blank">
+            <a href="https://www.instagram.com/graphicstecnologiaoficial/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 26 27" fill="none">
                     <path d="M8.84948 2.99493H17.696C21.0661 2.99493 23.8044 5.73315 23.8044 9.10326V17.9498C23.8044 19.5698 23.1608 21.1235 22.0153 22.2691C20.8697 23.4146 19.3161 24.0581 17.696 24.0581H8.84948C5.47937 24.0581 2.74115 21.3199 2.74115 17.9498V9.10326C2.74115 7.48323 3.3847 5.92956 4.53024 4.78402C5.67577 3.63849 7.22945 2.99493 8.84948 2.99493ZM8.63885 5.10125C7.63331 5.10125 6.66896 5.5007 5.95794 6.21172C5.24692 6.92274 4.84747 7.8871 4.84747 8.89263V18.1604C4.84747 20.2562 6.54306 21.9518 8.63885 21.9518H17.9067C18.9122 21.9518 19.8765 21.5524 20.5876 20.8414C21.2986 20.1303 21.698 19.166 21.698 18.1604V8.89263C21.698 6.79684 20.0024 5.10125 17.9067 5.10125H8.63885ZM18.8018 6.68099C19.151 6.68099 19.4858 6.81969 19.7327 7.06657C19.9796 7.31346 20.1183 7.6483 20.1183 7.99745C20.1183 8.34659 19.9796 8.68143 19.7327 8.92832C19.4858 9.1752 19.151 9.3139 18.8018 9.3139C18.4527 9.3139 18.1179 9.1752 17.871 8.92832C17.6241 8.68143 17.4854 8.34659 17.4854 7.99745C17.4854 7.6483 17.6241 7.31346 17.871 7.06657C18.1179 6.81969 18.4527 6.68099 18.8018 6.68099ZM13.2728 8.26074C14.6693 8.26074 16.0087 8.81552 16.9962 9.80305C17.9838 10.7906 18.5386 12.13 18.5386 13.5265C18.5386 14.9231 17.9838 16.2625 16.9962 17.25C16.0087 18.2375 14.6693 18.7923 13.2728 18.7923C11.8762 18.7923 10.5368 18.2375 9.54927 17.25C8.56174 16.2625 8.00695 14.9231 8.00695 13.5265C8.00695 12.13 8.56174 10.7906 9.54927 9.80305C10.5368 8.81552 11.8762 8.26074 13.2728 8.26074ZM13.2728 10.3671C12.4348 10.3671 11.6312 10.6999 11.0387 11.2924C10.4461 11.885 10.1133 12.6886 10.1133 13.5265C10.1133 14.3645 10.4461 15.1681 11.0387 15.7606C11.6312 16.3531 12.4348 16.686 13.2728 16.686C14.1107 16.686 14.9143 16.3531 15.5068 15.7606C16.0994 15.1681 16.4322 14.3645 16.4322 13.5265C16.4322 12.6886 16.0994 11.885 15.5068 11.2924C14.9143 10.6999 14.1107 10.3671 13.2728 10.3671Z"/>
                 </svg>
@@ -132,11 +132,11 @@
         </svg>
         <img src="/assets/images/logo-white.svg" alt="Graphics logo branca.">
         <nav>
-            <a href="" (click)="modal('close')">Home</a>
-            <a href="" (click)="modal('close')">Serviços</a>
-            <a href="" (click)="modal('close')">Depoimentos</a>
-            <a href="" (click)="modal('close')">Sobre</a>
-            <a href="" (click)="modal('close')">Contato</a>
+            <a routerLink="/home" (click)="scrollToElement('home')" (click)="modal('close')">Home</a>
+            <a routerLink="/home" (click)="scrollToElement('services')" (click)="modal('close')">Serviços</a>
+            <a routerLink="/home" (click)="scrollToElement('depoimentos')" (click)="modal('close')">Depoimentos</a>
+            <a routerLink="/home" (click)="scrollToElement('about')" (click)="modal('close')">Sobre</a>
+            <a routerLink="/home" (click)="scrollToElement('contact')" (click)="modal('close')">Contato</a>
         </nav>
         <button (click)="modal('close')" [routerLink]="['/calculate']">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
@@ -152,7 +152,7 @@
               Calcular investimento
         </button>
         <div>
-            <a href="" target="_blank">
+            <a href="https://www.facebook.com/graphicstecnologiaoficial" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="23" viewBox="0 0 17 23" fill="none">
                     <g clip-path="url(#clip0_223_1009)">
                       <path d="M5.16019 22.7062V12.2145H2.43036V8.43701H5.16019V5.21053C5.16019 2.67513 6.77272 0.346802 10.4883 0.346802C11.9927 0.346802 13.1051 0.493368 13.1051 0.493368L13.0175 4.02092C13.0175 4.02092 11.883 4.0097 10.645 4.0097C9.30507 4.0097 9.0904 4.63721 9.0904 5.67874V8.43701H13.124L12.9485 12.2145H9.0904V22.7062H5.16019Z"/>
@@ -164,7 +164,7 @@
                     </defs>
                 </svg>
             </a>
-            <a href="" target="_blank">
+            <a href="https://www.instagram.com/graphicstecnologiaoficial/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 26 27" fill="none">
                     <path d="M8.84948 2.99493H17.696C21.0661 2.99493 23.8044 5.73315 23.8044 9.10326V17.9498C23.8044 19.5698 23.1608 21.1235 22.0153 22.2691C20.8697 23.4146 19.3161 24.0581 17.696 24.0581H8.84948C5.47937 24.0581 2.74115 21.3199 2.74115 17.9498V9.10326C2.74115 7.48323 3.3847 5.92956 4.53024 4.78402C5.67577 3.63849 7.22945 2.99493 8.84948 2.99493ZM8.63885 5.10125C7.63331 5.10125 6.66896 5.5007 5.95794 6.21172C5.24692 6.92274 4.84747 7.8871 4.84747 8.89263V18.1604C4.84747 20.2562 6.54306 21.9518 8.63885 21.9518H17.9067C18.9122 21.9518 19.8765 21.5524 20.5876 20.8414C21.2986 20.1303 21.698 19.166 21.698 18.1604V8.89263C21.698 6.79684 20.0024 5.10125 17.9067 5.10125H8.63885ZM18.8018 6.68099C19.151 6.68099 19.4858 6.81969 19.7327 7.06657C19.9796 7.31346 20.1183 7.6483 20.1183 7.99745C20.1183 8.34659 19.9796 8.68143 19.7327 8.92832C19.4858 9.1752 19.151 9.3139 18.8018 9.3139C18.4527 9.3139 18.1179 9.1752 17.871 8.92832C17.6241 8.68143 17.4854 8.34659 17.4854 7.99745C17.4854 7.6483 17.6241 7.31346 17.871 7.06657C18.1179 6.81969 18.4527 6.68099 18.8018 6.68099ZM13.2728 8.26074C14.6693 8.26074 16.0087 8.81552 16.9962 9.80305C17.9838 10.7906 18.5386 12.13 18.5386 13.5265C18.5386 14.9231 17.9838 16.2625 16.9962 17.25C16.0087 18.2375 14.6693 18.7923 13.2728 18.7923C11.8762 18.7923 10.5368 18.2375 9.54927 17.25C8.56174 16.2625 8.00695 14.9231 8.00695 13.5265C8.00695 12.13 8.56174 10.7906 9.54927 9.80305C10.5368 8.81552 11.8762 8.26074 13.2728 8.26074ZM13.2728 10.3671C12.4348 10.3671 11.6312 10.6999 11.0387 11.2924C10.4461 11.885 10.1133 12.6886 10.1133 13.5265C10.1133 14.3645 10.4461 15.1681 11.0387 15.7606C11.6312 16.3531 12.4348 16.686 13.2728 16.686C14.1107 16.686 14.9143 16.3531 15.5068 15.7606C16.0994 15.1681 16.4322 14.3645 16.4322 13.5265C16.4322 12.6886 16.0994 11.885 15.5068 11.2924C14.9143 10.6999 14.1107 10.3671 13.2728 10.3671Z"/>
                 </svg>
@@ -247,19 +247,19 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="">Home</a>
+                        <a routerLink="/home" (click)="scrollToElement('home')">Home</a>
                     </li>
                     <li>
-                        <a href="">Serviços</a>
+                        <a routerLink="/home" (click)="scrollToElement('services')">Serviços</a>
                     </li>
                     <li>
-                        <a href="">Depoimentos</a>
+                        <a routerLink="/home" (click)="scrollToElement('feedback')">Depoimentos</a>
                     </li>
                     <li>
-                        <a href="">Sobre</a>
+                        <a routerLink="/home" (click)="scrollToElement('about')">Sobre</a>
                     </li>
                     <li>
-                        <a href="">Contato</a>
+                        <a routerLink="/home" (click)="scrollToElement('contact')">Contato</a>
                     </li>
                 </ul>
             </nav>
@@ -285,7 +285,7 @@
                 </button>
             </div>
             <div>
-                <a href="" target="_blank">
+                <a href="https://www.facebook.com/graphicstecnologiaoficial" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="17" height="23" viewBox="0 0 17 23" fill="none">
                         <g clip-path="url(#clip0_223_1009)">
                           <path d="M5.16019 22.7062V12.2145H2.43036V8.43701H5.16019V5.21053C5.16019 2.67513 6.77272 0.346802 10.4883 0.346802C11.9927 0.346802 13.1051 0.493368 13.1051 0.493368L13.0175 4.02092C13.0175 4.02092 11.883 4.0097 10.645 4.0097C9.30507 4.0097 9.0904 4.63721 9.0904 5.67874V8.43701H13.124L12.9485 12.2145H9.0904V22.7062H5.16019Z"/>
@@ -297,7 +297,7 @@
                         </defs>
                     </svg>
                 </a>
-                <a href="" target="_blank">
+                <a href="https://www.instagram.com/graphicstecnologiaoficial/" target="_blank">
                     <svg xmlns="http://www.w3.org/2000/svg" width="26" height="27" viewBox="0 0 26 27" fill="none">
                         <path d="M8.84948 2.99493H17.696C21.0661 2.99493 23.8044 5.73315 23.8044 9.10326V17.9498C23.8044 19.5698 23.1608 21.1235 22.0153 22.2691C20.8697 23.4146 19.3161 24.0581 17.696 24.0581H8.84948C5.47937 24.0581 2.74115 21.3199 2.74115 17.9498V9.10326C2.74115 7.48323 3.3847 5.92956 4.53024 4.78402C5.67577 3.63849 7.22945 2.99493 8.84948 2.99493ZM8.63885 5.10125C7.63331 5.10125 6.66896 5.5007 5.95794 6.21172C5.24692 6.92274 4.84747 7.8871 4.84747 8.89263V18.1604C4.84747 20.2562 6.54306 21.9518 8.63885 21.9518H17.9067C18.9122 21.9518 19.8765 21.5524 20.5876 20.8414C21.2986 20.1303 21.698 19.166 21.698 18.1604V8.89263C21.698 6.79684 20.0024 5.10125 17.9067 5.10125H8.63885ZM18.8018 6.68099C19.151 6.68099 19.4858 6.81969 19.7327 7.06657C19.9796 7.31346 20.1183 7.6483 20.1183 7.99745C20.1183 8.34659 19.9796 8.68143 19.7327 8.92832C19.4858 9.1752 19.151 9.3139 18.8018 9.3139C18.4527 9.3139 18.1179 9.1752 17.871 8.92832C17.6241 8.68143 17.4854 8.34659 17.4854 7.99745C17.4854 7.6483 17.6241 7.31346 17.871 7.06657C18.1179 6.81969 18.4527 6.68099 18.8018 6.68099ZM13.2728 8.26074C14.6693 8.26074 16.0087 8.81552 16.9962 9.80305C17.9838 10.7906 18.5386 12.13 18.5386 13.5265C18.5386 14.9231 17.9838 16.2625 16.9962 17.25C16.0087 18.2375 14.6693 18.7923 13.2728 18.7923C11.8762 18.7923 10.5368 18.2375 9.54927 17.25C8.56174 16.2625 8.00695 14.9231 8.00695 13.5265C8.00695 12.13 8.56174 10.7906 9.54927 9.80305C10.5368 8.81552 11.8762 8.26074 13.2728 8.26074ZM13.2728 10.3671C12.4348 10.3671 11.6312 10.6999 11.0387 11.2924C10.4461 11.885 10.1133 12.6886 10.1133 13.5265C10.1133 14.3645 10.4461 15.1681 11.0387 15.7606C11.6312 16.3531 12.4348 16.686 13.2728 16.686C14.1107 16.686 14.9143 16.3531 15.5068 15.7606C16.0994 15.1681 16.4322 14.3645 16.4322 13.5265C16.4322 12.6886 16.0994 11.885 15.5068 11.2924C14.9143 10.6999 14.1107 10.3671 13.2728 10.3671Z"/>
                     </svg>
